# Lem_in

./: .tut.swp  CMakeLists.txt  Makefile  leaks  lem-in  map  map_gen  mapmy  ten  tes  test  tt  tut
inc/: lem_in.h  libft.h
lib/ft_printf/: flags.c  handling.c
lib/libft/: del_arr.c  ft_lstadd_end.c  ft_strtrim.c  libft.h
src/: go_ants.c  graph_construction.c  main.c  save_input.c  save_links.c  save_rooms.c  search_pathes.c  service_functions.c
